# regexgenerator

./: .gitignore  CLAUDE.md  README.md  TODO.md  dev-requirements.txt  pyproject.toml  requirements.txt  test_complete_implementation.py  test_improved_algorithm.py  test_installation.py  test_quick_improvement.py  test_realistic_examples.py  test_structure.py
src/regexgen/: __init__.py  __main__.py
src/regexgen/algorithms/: __init__.py  simulated_annealing.py
src/regexgen/cli/: __init__.py  main.py
src/regexgen/patterns/: __init__.py  analysis.py  ast.py  mutations.py
src/regexgen/scoring/: __init__.py  fitness.py
src/regexgen/validation/: __init__.py  validator.py
